<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency_converter"
        android:textSize="36sp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
         />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">




        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from_currency"
        android:textSize="15sp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="20dp"
        />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_spinner"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
    <Spinner
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:id="@+id/convert_from"
        android:layout_gravity="center"


        />
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_currency"
            android:textSize="15sp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="20dp"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_spinner"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
        <Spinner
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:id="@+id/convert_to"
        android:layout_gravity="center"

        />
        </RelativeLayout>
</LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency_to_be_converted"
        android:textSize="15sp"
        android:layout_marginStart="24dp"
        />
    <EditText
        android:id="@+id/currency_to_be_converted"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:inputType="number"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:imeOptions="actionGo"
        tools:ignore="LabelFor,target"
        android:autofillHints="currency" />


    <TextView
        android:id="@+id/currency_converted"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:textSize="20dp"
        android:hint="@string/result"
         />

     


</LinearLayout>